Fixed gap that was visible when toolbar icon was active.
git-svn-id: http://public-cvs.squiz.net/svn/squiz-framework@1042 1b08cf3a-d8dc-418b-9366-0d0b919357ef

--- a/Systems/GUI/Widgets/Toolbar/Widgets/Container/Web/GUIToolbarContainer.css
+++ b/Systems/GUI/Widgets/Toolbar/Widgets/Container/Web/GUIToolbarContainer.css
@@ -17,7 +17,6 @@
     height: 25px;
     line-height: 25px;
     margin-right: -3px;
-    padding: 0 3px;
     text-shadow: 0px -1px 1px #000;
     border-color: #222 #222 #3A3A3A;
     *border-left-color: #999; /* IE 7 Target */
